<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.henvezz.calcolatrice.MainActivity">



    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="52dp"
        android:id="@+id/toolbar2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar2"
        android:id="@+id/text_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:text="|"
            android:textSize="44sp"
            android:id="@+id/textview"
            android:backgroundTint="@color/colorPrimary"
            android:layout_height="170dp"
            android:layout_below="@+id/toolbar2"
            android:layout_gravity="left"
            android:fadeScrollbars="false"
            android:scrollIndicators="right" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_layout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/column_0">

                <Button
                    android:text="("
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneParentesiAperta"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="1"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="4"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="7"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="200dp" />

                <Button
                    android:text="."
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="200dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/column_1">

                <Button
                    android:text=")"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneParentesiChiusaa"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="2"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="5"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="8"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="200dp" />

                <Button
                    android:text="0"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="200dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/column_2">

                <Button
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneCostante"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp"
                    android:text="@string/ans" />

                <Button
                    android:text="3"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="6"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="9"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneNumeroTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="="
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="calcolaEspressione"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/column_3">

                <Button
                    android:text="Ce"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="cancellaa"
                    android:longClickable="true"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp"
                    android:id="@+id/canc" />

                <Button
                    android:text="@string/pow"
                    android:textSize="24sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneOperandoDaTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="@string/plus"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneOperandoDaTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="0dp"
                    android:layout_height="200dp" />

                <Button
                    android:text="@string/minus"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneOperandoDaTastiera"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="200dp" />

                <Button
                    android:text="@string/divide"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneOperandoDaTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <Button
                    android:text="@string/times"
                    android:textSize="40sp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="immissioneOperandoDaTastiera"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="Calcolatrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <ImageButton

        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:layout_above="@+id/text_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/unnamed2"
        android:layout_marginRight="10dp"
        android:onClick="startGraph"
        android:layout_width="44dp" />

</RelativeLayout>
